--- a/pages/style.css
+++ b/pages/style.css
@@ -1,77 +1,135 @@
 body{
-	background-color: #6b6464;
-	color:#e0e0e0;
+	background-color: #181818;
+	color:#fc5e6d;
 	font-size: 20px;
 }
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+.container{
+	display: block;
+	position: relative;
+	padding-left: 25px;
+	margin-bottom: 15px;
+	cursor: pointer ;
+	user-select: none;
 }
 
-.switch input {display:none;}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #8A0808;
-  -webkit-transition: .4s;
-  transition: .4s;
-  border-radius: 34px;
+.container input{
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
 }
 
+.checkmark{
+	position: absolute;
+	top:0;
+	left:3px;
+	height: 15px;
+	width: 15px;
+	border: 2px solid #fc5e6d;
+	border-radius: 50%;
+}
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: #e0e0e0;
-  -webkit-transition: .4s;
-  transition: .4s;
+.checkmark:after{
+	content:"";
+	position:absolute;
+	display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.container .checkmark:after {
+  top: 3px;
+  left: 3px;
+  width: 9px;
+  height: 9px;
   border-radius: 50%;
-}
-input:checked + .slider {
-  background-color: #057825;
+  background: #fc5e6d;
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+.cim{
+	text-align: center;
+	font-size: 26px;
+}
+hr{
+	border : 0;
+  height: 1px; 
+background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #fc5e6d, rgba(0, 0, 0, 0));
+}
+
+ul{
+	list-style: none;
+}
+table{
+	width: 100%;
+	height: 100vh;
+	border-spacing: 5px;
 }
 
 #logo{
-position:top;
+	float: right;
+	width: 200px;
 }
-ul{
-	list-style-type:none;
+#adatok{
+	height : 30vh;
 }
-
-#a{
-	font-size:16px;
-}
-
-#b{
-	width:60px;
+.logo{
+	vertical-align: top;
+	text-align: right;
+	height: 20vh;
 }
 
-table
-{
-	width: 100%;
-	border: 2px;
-	border-color:black;
+.keret{
+	border: 2px solid;
+	border-color: #fc5e6d;
+	width: 33%;
+	padding: 5px;
+}
+#redony{
+	height: 40vh;
+	vertical-align: top;
+}
+#futes{
+vertical-align:top;
+}
+.container2{
+	display: block;
+	position: relative;
+	padding-left: 25px;
+	margin-bottom: 25px;
+	user-select: none;
+	cursor: pointer;
+}
+.container2 input{
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+}
+.checkmark2{
+	
+	position: absolute;
+	top: 0;
+	left:80%;
+	height: 20px;
+	width: 20px;
+	transform: rotate(45deg) ;
+	border: 2px solid #fc5e6d;
 }
 
-td{
-	vertical-align:top;
+.checkmark2:after{
+	content:"";
+	position:absolute;
+	display: none;
+}
+.container2 .checkmark2:after {
+  top: 1.5px;
+  left: 1.5px;
+  width: 17px;
+  height: 17px;
+  background: #fc5e6d;
+}
+.container2 input:checked ~ .checkmark2:after {
+  display: block;
 }
 
 
