--- a/pages/style.css
+++ b/pages/style.css
@@ -82,12 +82,12 @@ table{
 	
 }
 #redbelul{
-	display: none;
+	
 	position: absolute;
 	top:1.5%;
 	left: 2.5%;
 	width: 95px;
-	height: 75px;
+	height: 0px;
 	background-color: #fc5e6d;
 	
 }
@@ -185,14 +185,15 @@ table{
 	display:block;
 	position:relative;
 	top:0;
-	left:25%;
-	border: 5px dashed #181818;
+	left:28%;
     border-radius: 50%;
     background: #181818;
     background-clip: padding-box;
 	width: 174px;
 	height: 174px;
 	overflow: visible;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	 
 }
 .circle:after{
